--- a/src/app/poll-management/poll-management.component.scss
+++ b/src/app/poll-management/poll-management.component.scss
@@ -138,3 +138,12 @@
 .button.google {
   margin-top: 50px;
 }
+
+.recent-polls {
+  margin-bottom: 25px;
+
+  .recent-poll {
+    padding: 0;
+    margin: -5px 0;
+  }
+}
