--- a/src/styles.scss
+++ b/src/styles.scss
@@ -318,10 +318,85 @@ mat-card.option-card {
   flex-grow: 1;
 }
 
+.recent-movie-menu {
+  mat-icon {
+    background-image: linear-gradient(
+      52deg,
+      #ac32e4a8 0%,
+      #7918f2d4 51%,
+      #7092e6e6 100%
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+.add-new-item-btn {
+  $bg: linear-gradient(52deg, #ac32e4a8 0%, #7918f2d4 51%, #7092e6e6 100%);
+  background-image: $bg;
+
+  padding: 5px 10px;
+  height: 22px;
+  display: flex;
+  align-items: center;
+  font-size: 0.9em;
+  white-space: nowrap;
+
+  border: none;
+  outline: none;
+  position: relative;
+  z-index: 1;
+  border-radius: 5px;
+  background: $bg;
+  cursor: pointer;
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 2px;
+    right: 2px;
+    top: 2px;
+    bottom: 2px;
+    border-radius: 4px;
+    background-color: white;
+    z-index: -1;
+    transition: 200ms;
+  }
+
+  &::after {
+    content: attr(data);
+    font-size: 16px;
+    background: $bg;
+    -webkit-background-clip: text;
+    color: transparent;
+    transition: 200ms;
+  }
+
+  &:hover::before {
+    opacity: 50%;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+  }
+
+  &:hover::after {
+    color: #fff;
+  }
+
+  .icon {
+    margin-right: 7px;
+    background-image: $bg;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
 .loading-image,
 .loading-movie-score,
 .loading-main-text,
 .loading-sub-text,
+.loading-background,
 .loading-btn {
   background-image: -webkit-linear-gradient(
     left,
@@ -395,6 +470,16 @@ mat-card.option-card {
   background: #ececec;
   background-size: 250px;
   border-radius: 10px;
+  -webkit-animation: shine-loading-container-items 2s infinite ease-out;
+  animation: shine-loading-container-items 2s infinite ease-out;
+}
+
+.loading-background {
+  min-height: 150px;
+  width: 100%;
+  margin-bottom: 10px;
+  background: #686868;
+  background-size: 250px;
   -webkit-animation: shine-loading-container-items 2s infinite ease-out;
   animation: shine-loading-container-items 2s infinite ease-out;
 }
@@ -662,6 +747,10 @@ html {
 
     .available-reactions .add-btn {
       color: #8f8f8f;
+    }
+
+    app-about {
+      color: #dbdbdb;
     }
 
     movie-poll-item .option-card {
