--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -1,14 +1,16 @@
 <h1 mat-dialog-title>Login or use a nickname</h1>
 <div class="dialog-content" mat-dialog-content>
+  <p *ngIf="data.requireStrongAuth">
+    <b>You need to login with Google to access this feature!</b>
+  </p>
   <p class="info">
     To manage your polls you need to login with Google. No worries, you can
     still vote and react to polls withouth signing in. With login it's just
     easier and you can create and manage your own polls! 😉
   </p>
   <p class="tech-details">
-    Poll-a-Lot uses Firebase Authentication and only you forename will be stored
-    to be display in the app. Industry standard authentication is used so that
-    your login credentials will never be passed or saved to Poll-a-Lot.
+    Poll-a-Lot uses Firebase Authentication and only your display forename will
+    be stored to be display in the app.
     <a target="_blank" href="https://firebase.google.com/docs/auth"
       >Read more!</a
     >
@@ -21,26 +23,28 @@
     Login with Google
   </button>
   <div mat-dialog-content>
-    <p>Use nickname:</p>
-    <mat-form-field>
-      <input
-        matInput
-        placeholder="Nickname"
-        [ngModel]="data.nickname"
-        (ngModelChange)="trim($event)"
-      />
-    </mat-form-field>
-    <div mat-dialog-actions>
-      <button
-        class="close-button"
-        mat-button
-        [disabled]="data.nickname?.length < 2"
-        [mat-dialog-close]="data.nickname"
-        aria-label="Close"
-      >
-        Save
-      </button>
-    </div>
+    <ng-container *ngIf="data.requireStrongAuth === false">
+      <p>Use nickname:</p>
+      <mat-form-field>
+        <input
+          matInput
+          placeholder="Nickname"
+          [ngModel]="data.nickname"
+          (ngModelChange)="trim($event)"
+        />
+      </mat-form-field>
+      <div mat-dialog-actions>
+        <button
+          class="close-button"
+          mat-button
+          [disabled]="data.nickname?.length < 2"
+          [mat-dialog-close]="data.nickname"
+          aria-label="Close"
+        >
+          Save
+        </button>
+      </div>
+    </ng-container>
   </div>
   <div mat-dialog-actions>
     <button
