--- a/src/app/share-dialog/share-dialog.component.html
+++ b/src/app/share-dialog/share-dialog.component.html
@@ -1,4 +1,7 @@
-<h1 mat-dialog-title>Share the poll 🔗</h1>
+<h1 mat-dialog-title>
+  Share the poll:<br />
+  <b>{{ input.name }}</b>
+</h1>
 <div mat-dialog-content>
   <img
     src="/assets/img/sharing-is-caring.png"
