--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -1,8 +1,6 @@
 $posterWidth: min(35vw, 170px);
 $posterHeight: calc(3 / 2 * $posterWidth);
 
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,300&family=League+Gothic&display=swap");
-
 @keyframes pl-drop-in {
   from {
     opacity: 0;
@@ -247,7 +245,7 @@ div.dialog-content {
 .backdrop {
   height: calc(9 / 16 * min(450px, 90vw));
   width: calc(100% + 2 * 24px);
-  background-size: cover;
+  background-size: contain;
   margin: -20px -24px 0 -24px;
   padding-bottom: 20px;
   transition: opacity 0.7s;
@@ -278,7 +276,7 @@ div.dialog-content {
       align-items: flex-end;
     }
 
-    margin: 0 3px 15px;
+    margin: 0 3px 22px;
     border: solid 1px #554a4a8c;
     border-radius: 11px;
     width: 7px;
@@ -296,8 +294,8 @@ div.dialog-content {
 .curve-overflow {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-  margin: -20px -24px 0 -24px;
-  height: 29px;
+  margin: -28px -24px 0 -24px;
+  height: 36px;
   position: relative;
   top: -8px;
   z-index: 2;
