--- a/src/app/watch-list/watch-list-item/watch-list-item.component.html
+++ b/src/app/watch-list/watch-list-item/watch-list-item.component.html
@@ -26,6 +26,7 @@
             "
             [useSrcset]="true"
             [defaultImage]="'/assets/img/poster-placeholder.gif'"
+            [errorImage]="'/assets/img/poster-placeholder.png'"
             class="poster"
             [offset]="600"
           />
@@ -92,6 +93,7 @@
             "
             [useSrcset]="true"
             [defaultImage]="'/assets/img/poster-placeholder.gif'"
+            [errorImage]="'/assets/img/poster-placeholder.png'"
             class="poster"
             [offset]="600"
           />
