--- a/src/app/watch-list/watch-list.component.scss
+++ b/src/app/watch-list/watch-list.component.scss
@@ -71,7 +71,7 @@ mat-card[color="dark-primary"] {
     width: $posterWidth;
     border-radius: 6px;
     margin-right: 13px;
-    background-color: #b6b6b6;
+    background-color: #e0e0e9;
     background-image: url("/assets/img/poster-placeholder.gif") !important;
     background-size: cover;
   }
