Improve skeletor loader by fixing style issues.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -278,7 +278,7 @@
           <div [matMenuTriggerFor]="pollSelectMenu" class="add-new-item-btn">
             <mat-icon aria-label="Add new item" class="icon"
               >add_circle_outline</mat-icon
-            >Add movie to poll
+            >Add movie to recent poll
           </div>
         </ng-container>
       </ng-container>
